<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">


        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/imgLogo"
            android:layout_width="@dimen/img_logo_size"
            android:layout_height="@dimen/img_logo_size"
            android:scaleType="fitCenter"
            app:civ_border_color="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo_placeholder"
            app:tint="@color/colorAccent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv1"
            style="@style/main_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_spacing"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/large_spacing"
            android:text="@string/lbl_continue_to_care"
            app:fontFamily="sans-serif-medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgLogo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv2"
            style="@style/sub_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_spacing"
            android:text="@string/lbl_email"
            app:layout_constraintStart_toStartOf="@id/tv1"
            app:layout_constraintTop_toBottomOf="@id/tv1" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tv1"
            app:layout_constraintEnd_toEndOf="@id/tv1"
            app:layout_constraintTop_toBottomOf="@id/tv2"
            style="@style/edt_input"
            android:inputType="textEmailAddress"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv3"
            style="@style/sub_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/lbl_password"
            app:layout_constraintStart_toStartOf="@id/tv1"
            app:layout_constraintTop_toBottomOf="@id/edtEmail" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tv1"
            app:layout_constraintEnd_toEndOf="@id/tv1"
            app:layout_constraintTop_toBottomOf="@id/tv3"
            style="@style/edt_input"
            android:inputType="textPassword"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_spacing"
            app:layout_constraintEnd_toEndOf="@id/edtPassword"
            app:layout_constraintStart_toStartOf="@id/edtPassword"
            app:layout_constraintTop_toBottomOf="@id/edtPassword"
            android:text="@string/btn_login"
            style="@style/btn_submit"/>

        <LinearLayout
            android:id="@+id/linSocial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/btnLogin"
            app:layout_constraintEnd_toEndOf="@id/btnLogin"
            app:layout_constraintTop_toBottomOf="@id/btnLogin"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/medium_spacing">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/img_social_icon"
                android:layout_height="@dimen/img_social_icon"
                app:srcCompat="@drawable/ic_s_twitter"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/img_social_icon"
                android:layout_height="@dimen/img_social_icon"
                app:srcCompat="@drawable/ic_s_google"
                android:layout_marginEnd="@dimen/medium_spacing"
                android:layout_marginStart="@dimen/medium_spacing"
                />


            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/img_social_icon"
                android:layout_height="@dimen/img_social_icon"
                app:srcCompat="@drawable/ic_s_fb"
                />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/linSocial"
            app:layout_constraintEnd_toEndOf="@id/linSocial"
            app:layout_constraintTop_toBottomOf="@id/linSocial"
            android:text="@string/lbl_forgot_password"
            android:layout_marginTop="@dimen/medium_spacing"
            android:foreground="?attr/selectableItemBackgroundBorderless"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_spacing"
            app:layout_constraintEnd_toEndOf="@id/btnLogin"
            app:layout_constraintStart_toStartOf="@id/btnLogin"
            app:layout_constraintTop_toBottomOf="@id/tvForgot"
            android:text="@string/btn_register"
            style="@style/btn_submit"
            android:backgroundTint="@color/grey"
            android:textAllCaps="false"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
</layout>